test/asm/invalid-bank.err
error: VRAM bank value $0002 out of range ($0000 to $0001)
    at invalid-bank.asm(1)
Assembly aborted with 1 error
