test/asm/invalid-bank.asm
SECTION "vram", VRAM, BANK[2]
